# nom_nrql

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  PR_BODY.md  README.md
.cursor/plans/: add_nrql_advanced_features_12285f33.plan.md
.github/workflows/: CD.yml  CI.yml
src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
tests/: online_examples.rs  parse_fixtures.rs
tests/fixtures/errors/: invalid_syntax.nrql
tests/fixtures/examples/: apdex_named_arg.json  apdex_named_arg.nrql  average_duration_12h.json  average_duration_12h.nrql  compare_with_timeseries.json  compare_with_timeseries.nrql  compare_with_week.json  compare_with_week.nrql  facet_cases.json  facet_cases.nrql  facet_order_by_limit.json  facet_order_by_limit.nrql  facet_os_version.json  facet_os_version.nrql  filter_with_where.json  filter_with_where.nrql  from_log_select_star.json  from_log_select_star.nrql  from_transaction_pageview.json  from_transaction_pageview.nrql  funnel_with_where.json  funnel_with_where.nrql  limit_offset.json  limit_offset.nrql  percentile_95.json  percentile_95.nrql  rate_with_interval.json  rate_with_interval.nrql  select_count_avg_duration.json  select_count_avg_duration.nrql  select_function_alias.json  select_function_alias.nrql  since_now.json  since_now.nrql  since_unix_millis.json  since_unix_millis.nrql  sum_metric_since_until.json  sum_metric_since_until.nrql  timeseries_1_hour.json  timeseries_1_hour.nrql  (+14 more)
tests/fixtures/from/: multi_event_types.json  multi_event_types.nrql
tests/fixtures/limit_offset/: limit_only.json  limit_only.nrql
tests/fixtures/minimal/: from_select.json  from_select.nrql
tests/fixtures/select/: attrs_and_alias.json  attrs_and_alias.nrql
(+4 files in other folders)
