[package]
name = "nom_nrql"
version = "0.1.0"
edition = "2024"
description = "NRQL (New Relic Query Language) streaming parser built with nom."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bengreenier/nom-nrql"
documentation = "https://docs.rs/nom_nrql"
readme = "README.md"
keywords = ["nrql", "newrelic", "parser", "nom"]
categories = ["parser-implementations", "parsing"]
exclude = ["/.github", "/.cursor"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.44"

[dev-dependencies]
serde_json = "1.0"
tracing-test = "0.2.6"
