[package]
name = "nom_nrql"
version = "0.1.2"
edition = "2024"
description = "NRQL (New Relic Query Language) streaming parser built with nom."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bengreenier/nom-nrql"
documentation = "https://docs.rs/nom_nrql"
readme = "README.md"
keywords = ["nrql", "newrelic", "parser", "nom"]
categories = ["parser-implementations", "parsing"]
exclude = ["/.github", "/.cursor"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
alloc = ["nom/alloc", "serde/alloc"]
std = ["alloc", "nom/std", "serde/std", "tracing/std"]

[dependencies]
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"] }

[dev-dependencies]
serde_json = "1.0"
tracing-test = "0.2.6"
